kubernetes/frontend/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: lastmile
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
